--- a/about.html
+++ b/about.html
@@ -72,7 +72,7 @@
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
         <h3>Tech Intro</h3>
-        <p>I am a student of VIT Vellore, currently pursuing B.Tech in Computer Science. I try my best to be a full stack App Developer. I am currently learning backend web development using Python and Flask and I love to try out new languages and domains. My first language is Java, followed by Python. I am planning to dive into Blockchains using Etheruem and Solidity.</p>
+        <p>I am a student of VIT Vellore, currently pursuing B.Tech in Computer Science. I am a part of IEEE-VIT, CodeChef-VIT and Smoketrees. I try my best to be a full stack App Developer. I am currently learning backend web development using Python and Flask and I love to try out new languages and domains. My first language is Java, followed by Python. I have worked in the field of Computer Vision using openCV. I am planning to dive into Blockchains using Etheruem and Solidity.</p>
         </p>
       </div>
     </div>
