--- a/featured.html
+++ b/featured.html
@@ -70,7 +70,7 @@
       <div class="col-lg-8 col-md-10 mx-auto">
         <br>
         <div class="col-lg-8 col-md-10 mx-auto">
-        <a href="https://github.com/Ishan-001/Universal-Bookmark-App/blob/master/app-release.apk"><img src="img/playstore.png" alt="HTML5 Icon" width="384" height="128"/></a>
+        <a href="https://play.google.com/store/apps/details?id=com.codechefvit.bookmarked"><img src="img/playstore.png" alt="HTML5 Icon" width="384" height="128"/></a>
         </div>
         <br>
         <p style="font-size: 50px; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-weight: bold;">What can the app do for you?</p>
