--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="description" content="">
-        <meta name="author" content="">
-        <title>Freelancer - Start Bootstrap Theme</title>
+        <meta name="description" content="Portfolio">
+        <meta name="author" content="Ishan">
+        <title>ishan.apk</title>
         <!-- Font Awesome icons (free version)-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js" crossorigin="anonymous"></script>
         <!-- Core theme CSS (includes Bootstrap)-->
@@ -292,12 +292,11 @@ Group your words into categories.</p>
                 <!-- About Section Content-->
                 <div class="row">
                     <div class="col-lg-4 ml-auto">
-                        <p class="pre-wrap lead">Formal:
-Hey there! I am Ishan Khandelwal, a sophomore at VIT Vellore pursuing B.Tech in Computer Science. I am passionate about Android Development from design to execution. I love to dive into various fields of CS and do projects but I eventually  revert back to android :)</p>
+                        <p class="pre-wrap lead"><b>Formal:</b>
+Hey there! I am Ishan Khandelwal, a sophomore at VIT Vellore pursuing B.Tech in Computer Science. I am passionate about Android Development from design to execution. I love to explore various fields of CS but eventually I revert back to android :)</p>
                     </div>
                     <div class="col-lg-4 mr-auto">
-                        <p class="pre-wrap lead">Informal:
-
+                        <p class="pre-wrap lead"><b>Informal:</b>                           
 Weeb
 Traveller
 Biker
@@ -325,27 +324,9 @@ Developer</p>
     <script src="https://medium-widget.pixelpoint.io/widget.js"></script>
     <script>MediumWidget.Init({renderTo: '#medium-widget', params: {"resource":"https://medium.com/@ishan_","postsPerLine":2,"limit":1,"picture":"big","fields":["description","author","claps","publishAt"],"ratio":"landscape"}})</script>
 
-                <div class="divider-custom">
-                    <div class="divider-custom-line"></div>
-                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
-                    <div class="divider-custom-line"></div>
-                </div>
+               
                 <!-- Contact Section Content-->
-                <div class="row justify-content-center">
-                    <div class="col-lg-4">
-                        <div class="d-flex flex-column align-items-center">
-                            <div class="icon-contact mb-3"><i class="fas fa-mobile-alt"></i></div>
-                            <div class="text-muted">Phone</div>
-                            <div class="lead font-weight-bold">(555) 555-5555</div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="d-flex flex-column align-items-center">
-                            <div class="icon-contact mb-3"><i class="far fa-envelope"></i></div>
-                            <div class="text-muted">Email</div><a class="lead font-weight-bold" href="mailto:name@example.com">name@example.com</a>
-                        </div>
-                    </div>
-                </div>
+                
             </div>
         </section>
         <footer class="footer text-center">
