--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#portfolio">PORTFOLIO</a>
                         </li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#resume">RESUME</a>
+                        </li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">ABOUT</a>
                         </li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">BLOG</a>
@@ -277,6 +279,24 @@ Group your words into categories.</p>
                 </div>
             </div>
         </div>
+
+        <section class="page-section" id="resume">
+            <div class="container">
+                <!-- About Section Heading-->
+                <div class="text-center">
+                    <h2 class="page-section-heading text-secondary d-inline-block mb-0">RESUME</h2>
+                </div>
+                <!-- Icon Divider-->
+                <div class="divider-custom">
+                    <div class="divider-custom-line"></div>
+                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                    <div class="divider-custom-line"></div>
+                </div>
+                <!-- About Section Content-->
+                <embed src="assets/Resume_Updated.pdf" width="100%" height="1100px" />
+            </div>
+        </section>
+
         <section class="page-section bg-primary text-white mb-0" id="about">
             <div class="container">
                 <!-- About Section Heading-->
@@ -324,11 +344,9 @@ Developer</p>
     <script src="https://medium-widget.pixelpoint.io/widget.js"></script>
     <script>MediumWidget.Init({renderTo: '#medium-widget', params: {"resource":"https://medium.com/@ishan_","postsPerLine":2,"limit":1,"picture":"big","fields":["description","author","claps","publishAt"],"ratio":"landscape"}})</script>
 
-               
-                <!-- Contact Section Content-->
-                
             </div>
         </section>
+
         <footer class="footer text-center">
             <div class="container">
                 <div class="row">
